tests/cases/standard-library/errors/string/std-string-append-debug-different-zone.ari
struct Label {
  value: i64,
}

impl fmt::Debug for Label {
  fn debug_in(self: ref Self, zone: ref mut Zone) -> String {
    var output = std::string::new(zone, 8);
    output.append_string_in(zone, "Label(");
    output.append_value(self.value);
    output.append_string_in(zone, ")");
    return output;
  }
}

fn main() -> i64 {
  var source = zone::create(64);
  var target = zone::create(64);
  var text = std::string::new(ref mut source, 0);
  let label = Label { value: 7 };
  text.append_debug_in(ref mut target, label);
  zone::destroy(target);
  zone::destroy(source);
  return text.len();
}
